Fixed immutable lessons count